# TinyRustKernel

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  config.mk  i386-k.json  peda-session-kernel-i386.bin.txt  sections.txt
assets/: convert-ascii.py  convert-vga.py  logo-ascii.txt  logo-ascii.vga
elf/: Cargo.toml
elf/src/: enums.rs  iterators.rs  lib.rs
i386/: Cargo.toml
i386/src/: lib.rs  pic.rs
i386/src/instructions/: idt.rs  lgdt.rs  mod.rs  port.rs
kallocator/: Cargo.toml
kallocator/src/: lib.rs
libs/libc/: printf.c  puts.c
no_std_io/: Cargo.toml
no_std_io/src/: lib.rs
roms/: roms.mk
roms/a_test/: Makefile  test.c
roms/chichevaders/: .gitignore
roms/perrodlauncher/: .gitignore
roms/yakanoid/: .gitignore
src/: lib.rs  logger.rs  memory.rs  multiboot.rs  serial.rs  startup.rs  strings.rs
src/arch/: mod.rs
src/arch/i386/: crt0.S  grub.cfg  isr.S  linker.ld  mod.rs  pic.rs  pit.rs
src/arch/i386/instructions/: idt.rs  lgdt.rs  mod.rs  port.rs
src/interrupts/: handlers.rs  mod.rs
src/kfs/: mod.rs  reader.rs
src/peripherals/: mod.rs  serial.rs  speaker.rs  timer.rs  vga.rs
src/peripherals/keyboard/: mod.rs  qwerty.rs
src/peripherals/vga/: graphic.rs  mod.rs  text.rs
src/userland/: mod.rs  process.rs
tools/: create-iso.sh
tools/mkkfs/: .gitignore  Makefile
vga/: Cargo.toml
vga/src/: lib.rs
