[package]
name = "rk"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitfield = "0.13"
lazy_static = { version = "1", features = ["spin_no_std"] }
log = { version = "0.4", features = [] }
rlibc = "1.0"
spin = "*"
volatile = "0.2"

[dependencies.elf]
path = "elf"
version = "0.1"
features = ["no_std"]

[dependencies.i386]
path = "i386"
version = "0.1"
features = ["no_std"]

[dependencies.kallocator]
path = "kallocator"
version = "0.1"

[dependencies.no_std_io]
version = "0.1"
path = "no_std_io"
features = ["no_std"]

[dependencies.vga]
path = "vga"
version = "0.1"
features = ["no_std"]
